force-app/src/objects/cpm__Transaction__c.object
<CustomObject>
    <description>Transaction contains the records of the transaction set. One record per mutation/transaction on the bank receipt. It can be either an incoming or outgoing transaction.</description>
    <fields>
        <fullName>cpm__Account_Holder_Name__c</fullName>
        <description>The account holder name of the debitor account</description>
        <inlineHelpText>The account holder name of the debitor account</inlineHelpText>
        <label>Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Account_Servicer_Reference__c</fullName>
        <description>Transaction reference provided by the bank.</description>
        <inlineHelpText>Transaction reference provided by the bank.</inlineHelpText>
        <label>Account Servicer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Actual_Amount__c</fullName>
        <description>Returns negative amount when type is debit</description>
        <formula>IF(ISPICKVAL(cpm__Type__c, &apos;Debit&apos;), cpm__Amount__c *-1, cpm__Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns negative amount when type is debit</inlineHelpText>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Additional_Entry_Information__c</fullName>
        <label>Additional Entry Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Address_Line_1__c</fullName>
        <description>First address line as provided in the import file.</description>
        <inlineHelpText>First address line as provided in the import file.</inlineHelpText>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Amount__c</fullName>
        <description>The amount of this transaction.</description>
        <inlineHelpText>The amount of this transaction.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__BIC_Code__c</fullName>
        <description>The bic code related to the IBAN if known.</description>
        <inlineHelpText>The bic code related to the IBAN if known.</inlineHelpText>
        <label>BIC Code</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Building_Number__c</fullName>
        <description>The building number address field provided by the import file.</description>
        <inlineHelpText>The building number address field provided by the import file.</inlineHelpText>
        <label>Building Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Campaign_Member_Id__c</fullName>
        <label>Campaign Member Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__City__c</fullName>
        <description>The city address field as provided in the import file.</description>
        <inlineHelpText>The city address field as provided in the import file.</inlineHelpText>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Country__c</fullName>
        <description>The country address field as provided in the import file.</description>
        <inlineHelpText>The country address field as provided in the import file.</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Date__c</fullName>
        <description>The date of the Transaction.</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__End_To_End_ID__c</fullName>
        <description>A Id provided by the initiating party for this transaction to identify the transaction throughout the process.</description>
        <inlineHelpText>A Id provided by the initiating party for this transaction to identify the transaction throughout the process.</inlineHelpText>
        <label>End To End ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Entry_Reference__c</fullName>
        <description>Internal CAMT.053 reference for an Entry Node in the file (NtryRef)</description>
        <inlineHelpText>Internal CAMT.053 reference for an Entry Node in the file (NtryRef)</inlineHelpText>
        <label>Entry Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Entry_Type__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry</fullName>
                </value>
                <value>
                    <fullName>Entry Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Failure_Status__c</fullName>
        <description>Failure Status of the automatic matching. Why couldn&apos;t the transaction be matched</description>
        <inlineHelpText>Specifies why the transaction couldn&apos;t be matched</inlineHelpText>
        <label>Failure Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount incorrect for reversal</fullName>
                </value>
                <value>
                    <fullName>Installment not collected before reversal</fullName>
                </value>
                <value>
                    <fullName>Installment not pending</fullName>
                </value>
                <value>
                    <fullName>Lead could not be converted</fullName>
                </value>
                <value>
                    <fullName>No destination found</fullName>
                </value>
                <value>
                    <fullName>No contact or account could be identified</fullName>
                </value>
                <value>
                    <fullName>No single matching installment found</fullName>
                </value>
                <value>
                    <fullName>Matching on IBAN is disabled</fullName>
                </value>
                <value>
                    <fullName>Matching on address is disabled</fullName>
                </value>
                <value>
                    <fullName>Transaction is Debit without a payment reference</fullName>
                </value>
                <value>
                    <fullName>Unexpected error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__File_Reference__c</fullName>
        <description>The matched (bulk) file this transaction belongs to.</description>
        <label>File Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Error__c</fullName>
        <label>Guided Matching Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Installment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guided Matching Installment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Job_Id__c</fullName>
        <label>Guided Matching Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Log__c</fullName>
        <label>Guided Matching Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Nr_Of_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Guided Matching Nr of Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Nr_Of_Rules_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Guided Matching Nr of Rules Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Has_Been_In_Guided_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Been In Guided Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <description>The bankaccount of the debitor.</description>
        <inlineHelpText>The bankaccount of the debitor.</inlineHelpText>
        <label>Bank Account Number</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installment</label>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Job_Group_Identifier__c</fullName>
        <description>Field to store the Job group identifier from cpm__Job__c</description>
        <label>Job Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Worked_On_Date__c</fullName>
        <label>Last Worked On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_Reference__c</fullName>
        <description>The mandate reference used in this transaction.</description>
        <inlineHelpText>The mandate reference used in this transaction.</inlineHelpText>
        <label>Mandate Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Matched_By_ProcessingHub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matched By ProcessingHub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Multiple_Installment_Ids__c</fullName>
        <description>If more than one installment is involved in fully handling this transaction, this field will store the installment ids comma-separated.</description>
        <label>Multiple Installment Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Open_Amount__c</fullName>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Other_Installment_Ids__c</fullName>
        <description>If more than one installment is involved in fully handling this inbound transaction, this field will store the other (2nd one and onwards) installment ids comma-separated.</description>
        <label>Other Installment Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Info_Id__c</fullName>
        <label>Payment Info Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Profile</label>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Reference__c</fullName>
        <description>THe Payment Reference for the transaction</description>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__PostalCode__c</fullName>
        <description>The postal code address field provided by the import file.</description>
        <inlineHelpText>The postal code address field provided by the import file.</inlineHelpText>
        <label>PostalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Processed_Installment_Ids__c</fullName>
        <description>TODO:: Give proper description: this field will store the installment ids comma-separated.</description>
        <label>Processed Installment Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__ProcessingHub_Id__c</fullName>
        <description>The Id the Transaction is known with inside the ProcessingHub.</description>
        <externalId>true</externalId>
        <label>ProcessingHub Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processor__c</fullName>
        <description>StepOrange Payment Processor</description>
        <inlineHelpText>StepOrange Payment Processor</inlineHelpText>
        <label>Processor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Raw_XML_entry__c</fullName>
        <description>Represents a single transaction XML</description>
        <inlineHelpText>Represents a single transaction XML</inlineHelpText>
        <label>Raw XML entry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Reason_Code__c</fullName>
        <description>The Reason code for this transaction.</description>
        <inlineHelpText>The Reason code for this transaction.</inlineHelpText>
        <label>Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Remittance_Information_Long__c</fullName>
        <description>Complete remittance info from all remittance information elements.</description>
        <inlineHelpText>Complete remittance info from all remittance information elements.</inlineHelpText>
        <label>Remittance Information Long</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Remittance_Information__c</fullName>
        <description>Trimmed remittance info. For complete info, see Remitting Information Long.</description>
        <label>Remittance Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Reported_Payment_Method_Code__c</fullName>
        <description>The code representation of payment method that was used in this transaction in</description>
        <inlineHelpText>The code representation of payment method that was used in this transaction in</inlineHelpText>
        <label>Reported Payment Method Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Reported_Payment_Method__c</fullName>
        <description>Payment method that was used in this transaction</description>
        <inlineHelpText>Payment method that was used in this transaction</inlineHelpText>
        <label>Reported Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Reversal_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this is a reversal transaction.</description>
        <inlineHelpText>Checked: this is a reversal transaction.</inlineHelpText>
        <label>Reversal Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Start_Guided_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Guided Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Status_Reason__c</fullName>
        <description>The reason why this mutation record has the current status.</description>
        <inlineHelpText>The reason why this mutation record has the current status.</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard Reversal</fullName>
                </value>
                <value>
                    <fullName>Multiple Account Holders for IBAN found</fullName>
                </value>
                <value>
                    <fullName>Multiple Installments found with the same amount</fullName>
                </value>
                <value>
                    <fullName>No installment found for reversal</fullName>
                </value>
                <value>
                    <fullName>No reference found for reversal</fullName>
                </value>
                <value>
                    <fullName>Reversal without send Installment</fullName>
                </value>
                <value>
                    <fullName>Unknown IBAN</fullName>
                </value>
                <value>
                    <fullName>Unknown Payment Reference</fullName>
                </value>
                <value>
                    <fullName>Multiple Payment Profiles found for IBAN</fullName>
                </value>
                <value>
                    <fullName>Amounts don&apos;t match</fullName>
                </value>
                <value>
                    <fullName>Destination on Campaign is required and not present</fullName>
                </value>
                <value>
                    <fullName>Installment has not been collected yet</fullName>
                </value>
                <value>
                    <fullName>No Payment Profile while matching on Campaign. Unknown Contact/Account</fullName>
                </value>
                <value>
                    <fullName>Installment already collected</fullName>
                </value>
                <value>
                    <fullName>Installment is pending</fullName>
                </value>
                <value>
                    <fullName>Multiple mutations found for installment</fullName>
                </value>
                <value>
                    <fullName>No installment found with correct Amount for IBAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>The current status for this transaction record.</description>
        <inlineHelpText>The current status for this transaction record.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
                <value>
                    <fullName>Manual Matched</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Batch Failed</fullName>
                </value>
                <value>
                    <fullName>Partially Matched</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Guided Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Street__c</fullName>
        <description>The Street address field provided by the import file.</description>
        <inlineHelpText>The Street address field provided by the import file.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Transaction_set__c</fullName>
        <description>The transdaction set this transaction is a part of</description>
        <inlineHelpText>The mutation set this transaction is a part of</inlineHelpText>
        <label>Transaction set</label>
        <referenceTo>cpm__Transaction_Set__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <description>The type of mutation</description>
        <inlineHelpText>The type of mutation</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Use_Open_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Open Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Value_Date__c</fullName>
        <description>The value date related to the CAMT file.</description>
        <label>Value Date</label>
        <type>DateTime</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TR-{0}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>